# c-wrapper-mg

./: .hg_archival.txt  .hgtags  COPYING  ChangeLog  DIST  Makefile.in  README  README.md  README_orig  configure.ac
benchmark/: Makefile  benchmark-helpers.scm  lexer.scm  parser-bench.scm  parser-only.scm  test_func.c  test_func.h  test_func.scm  test_funclib.stub
doc/: Makefile.in  c-wrapper-ref.texi  c-wrapper-refe.html  c-wrapper-refj.html  extract
examples/: test1001.scm
examples/ImageMagick/: Makefile  magick.scm
examples/gtk/: Makefile  gtk-hello.scm
examples/perl/: perl.scm
examples/sdl/: breakout.scm  breakout_cygwin.scm  sdl_helper.c
examples/sdl2/: Makefile  breakout.bat
examples/stdio/: Makefile  hello.scm
examples_mingw/mml/: README.md  audplaymod.scm  audplaymod_sub_mingw32.scm  audplaymod_sub_mingw64_32.scm  audplaymod_sub_mingw64_64.scm  audplaymod_sub_other.scm  audtest1001.bat  audtest1001.scm  mmlproc.scm  test1001.bat  test1001.scm  test1001_mingw64_32.bat  test1001_mingw64_64.bat
examples_mingw/sdl2/: Makefile  README.md  README_orig  breakout-mg-mingw64_32.bat  breakout-mg-mingw64_32.scm  breakout-mg-mingw64_64.bat  breakout-mg-mingw64_64.scm  breakout-mg.bat  breakout-mg.scm  breakout.scm
examples_mingw/stdio/: printf.bat  printf.scm  printf_mingw64_32.bat  printf_mingw64_64.bat
examples_mingw/ttf/: README.md  ttftest.bat  ttftest.scm  ttftest_mingw64_32.bat  ttftest_mingw64_64.bat  ttftest_sub_mingw32.scm  ttftest_sub_mingw64_32.scm  ttftest_sub_mingw64_64.scm  ttltest_sub_other.scm
experiment/: cairo-spline.scm  cocoa.scm  curse.scm  esound.scm  magick.scm  perf.scm  perl.scm  python.scm  stdio.scm  stubgen.scm
lib/: Makefile.in  c-wrapper.scm
lib/c-wrapper/: c-ffi.scm  c-lex.scm  c-parser.scm  config.scm.in  context.scm  objc-ffi.scm  stubgen.scm.in
libffi_patch/: ffi.c  ffi.c.diff  memo.txt
libffi_patch/old_libffi-3.1/: ffi.c
objc/: Makefile.in  objc-wrapper.scm
objc/c-wrapper/: objc-ffi.scm
src/: Makefile.in  ObjCError.c  ObjCError.h  c-ffi.c  c-ffi.h  c-ffilib.stub  c-grammar.scm  c-grammar.y  c-lex.c  c-lex.h  c-lexlib.stub  c-parser.c  c-parser.h  c-parserlib.stub  closure_alloc.c  closure_alloc.h  cwcompile.in  genyacc.scm  mman.c  mman.h  util.h  y.tab.c
src/libffi/: memo.txt
testsuite/: Makefile.in  array_qualifier-test.scm  array_qualifier.h  attr-test.scm  ctypestest.scm  cwrappertest.scm  ffitest.c  ffitest.h  ffitest.scm  fptr_array-test.scm  fptr_array.c  fptr_array.h  gcc_extension-test.scm  gcc_extension.c  gcc_extension.h  inline-test.scm  objc-test.h  objc-test.m  objc-test.scm  stddef_patch.h  stdio-test.scm  stdio-test_sub.scm  stdio_patch.h  struct_in_union-test.scm  struct_in_union.h  typename_in_declaration-test.scm  typename_in_declaration.h
